--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@ blocks:
             -
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
+                image-focus-point:
+                    percent-from-left: 50
+                    percent-from-top: 50
                 block-content-html: >-
                     <h3 class="large-heading-serif">Taru</h3><p>The signature
                     culinary destination of the resort, Taru offers an immersive
@@ -343,6 +346,9 @@ blocks:
             -
                 background-desktop-image: /uploads/beach-house-1.jpg
                 background-mobile-image: /uploads/beach-house-1.jpg
+                image-focus-point:
+                    percent-from-left: 50
+                    percent-from-top: 50
                 block-content-html: >-
                     <h3 class="large-heading-serif">Beach House</h3><p>A
                     stunning addition to the Canggu coastline, the Beach House
@@ -354,6 +360,10 @@ blocks:
             -
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
+                image-focus-point:
+                    percent-from-left: 50
+                    percent-from-top: 0
+                
                 block-content-html: >-
                     <h3 class="large-heading-serif">Sazón</h3><p>Led by
                     award-winning Chef Andrew Walsh, experience the neighborhood
