Updated 1 file via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -182,11 +182,11 @@ blocks:
                     temple. This hallowed site, celebrated for its age-old
                     purification rites, has beckoned travellers in pursuit of
                     spiritual rejuvenation for over a millennium.</p><p></p>
-                link: mailto:concierge@regentbalicanggu.com
+                link:
                 reserve-link:
                 button:
                     text: learn more
-                    url: '#'
+                    url: mailto:concierge@regentbalicanggu.com
             -
                 image: /uploads/experience4.jpg
                 block-content-html: >-
@@ -197,11 +197,11 @@ blocks:
                     excursion, led by seasoned local guides, who shall elucidate
                     the intricacies of the age-old Subak irrigation system—a
                     testament to Balinese ingenuity.</p>
-                link: mailto:concierge@regentbalicanggu.com
+                link:
                 reserve-link:
                 button:
                     text: learn more
-                    url:
+                    url: mailto:concierge@regentbalicanggu.com
             -
                 image: /uploads/experience-topeng.jpg
                 block-content-html: >-
@@ -213,11 +213,11 @@ blocks:
                     centuries-old traditions. Our Regent Experience Agent will
                     curate your journey through this cultural treasure, ensuring
                     a guided and bespoke encounter.</p>
-                link: mailto:concierge@regentbalicanggu.com
+                link:
                 reserve-link:
                 button:
                     text: learn more
-                    url:
+                    url: mailto:concierge@regentbalicanggu.com
             -
                 image: /uploads/experience2.jpg
                 block-content-html: >-
@@ -229,11 +229,11 @@ blocks:
                     ancient site. Our Regent Experience Agent will ensure your
                     experience at this cultural gem is guided and
                     personalised.</p>
-                link: mailto:concierge@regentbalicanggu.com
+                link:
                 reserve-link:
                 button:
                     text: learn more
-                    url:
+                    url: mailto:concierge@regentbalicanggu.com
         color-scheme: dark
 seo:
     title: Regent Website Proposal | Kelapa Creative
