Updated 2 files via CloudCannon.

--- a/Wellness.html
+++ b/Wellness.html
@@ -125,9 +125,9 @@ blocks:
             subHeading: COLD PLUNGE & POOL
             heading:
             p-text: >-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod  tempor incididunt ut labore et dolore magna
-                aliqua.</p>
+                <p>Immerse in invigorating waters that awaken the senses,
+                restore balance, and leave you feeling renewed from the inside
+                out.</p>
             button:
             text: Discover More
             url: '#'
