Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@ blocks:
                     url:
             -
                 image: /uploads/rooms/Garden-Villa-Private-Pool.jpg
-                block-content-html: <h2>One Bedroom Garden Pool Villa</h2> <p>lorem ipsum</p>
+                block-content-html: >-
+                    <h2>One Bedroom Garden Pool Villa</h2> <p>Set within the
+                    resort’s tropical gardens, this one-bedroom villa embodies
+                    elegance where space and harmony unite. The king bed and
+                    walk-in closet open to an ensuite with an outdoor shower,
+                    and hand carved teak bathtub.</p>
                 link:
                 reserve-link: /suites-and-villas
                 button:
@@ -363,7 +368,6 @@ blocks:
                 image-focus-point:
                     percent-from-left: 50
                     percent-from-top: 0
-                
                 block-content-html: >-
                     <h3 class="large-heading-serif">Sazón</h3><p>Led by
                     award-winning Chef Andrew Walsh, experience the neighborhood
