--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -338,7 +338,14 @@ blocks:
                         extra-feature:
                             -
                             -
-                        content: ''
+                        content: >-
+                            Immersed in relaxation, this generous suite offers
+                            seclusion with a refreshing view and direct access
+                            to the lagoon. A separate living room and extended
+                            terrace provide space to relax, while a king bed
+                            offers gentle comfort. Your stay is enriched with
+                            unlimited laundry, all day breakfast, and the
+                            attentive support of our Regent Experience Agents.
                         images:
                             -
                                 image: >-
@@ -357,7 +364,12 @@ blocks:
                         extra-feature:
                             -
                             -
-                        content: ''
+                        content: >-
+                            Set within the resort’s tropical gardens, this
+                            one-bedroom villa embodies elegance where space and
+                            harmony unite. The king bed and walk-in closet open
+                            to an ensuite with an outdoor shower, and hand
+                            carved teak bathtub.
                         images:
                             -
                                 image: >-
