Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -419,7 +419,22 @@ blocks:
                         sleeps: 0
                         extra-feature:
                             - ''
-                        content: ''
+                        content: >-
+                            Set within the resort’s tropical gardens, this
+                            one-bedroom villa embodies elegance where space and
+                            harmony unite. The king bed and walk-in closet open
+                            to an ensuite with an outdoor shower, and hand
+                            carved teak bathtub.
+
+
+                            Your terrace leads to a private 20 sqm pool,
+                            offering unhurried moments beneath the island's
+                            golden sun. A dedicated pantry and dining room,
+                            perfect for intimate gatherings, make the villa
+                            ideal for moments of solace. Villa guests will
+                            experience in-villa check-in, unlimited laundry,
+                            in-villa breakfast, as well as exclusive Regent Club
+                            access.
                         images:
                             -
                                 image: /uploads/rooms/Garden-Villa-Private-Pool.jpg
