--- a/media.html
+++ b/media.html
@@ -17,7 +17,7 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-                 "<h2 class='heading-lg'>Media</h2><p>We are delighted to connect with members of the international media who wish to explore Regent Bali Canggu. Our team is pleased to assist with story development, interview requests, press stays, and access to imagery or detailed information about the resort, its experiences, and its upcoming openings.</p><p>Whether you are covering luxury travel, design, culture, or the evolving spirit of Canggu, we welcome the opportunity to support your work.</p><p>For all media enquiries, please reach out to our Communications Team at <a href="mailto:reservations.regentbali@ihg.com">reservations.regentbali@ihg.com</a>.</p><p>We look forward to collaborating with you.</p>"
+                 "<h2 class='heading-lg'>Media</h2><p>We are delighted to connect with members of the international media who wish to explore Regent Bali Canggu. Our team is pleased to assist with story development, interview requests, press stays, and access to imagery or detailed information about the resort, its experiences, and its upcoming openings.</p><p>Whether you are covering luxury travel, design, culture, or the evolving spirit of Canggu, we welcome the opportunity to support your work.</p><p>For all media enquiries, please reach out to our Communications Team at <a href="mailto:marketing.regentbali@ihg.com">marketing.regentbali@ihg.com</a>.</p><p>We look forward to collaborating with you.</p>"
         overlay-color-scheme: mint-400
         content-max-width: 43rem
         text-alignment: center
