--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -488,7 +488,7 @@ blocks:
         min-height: 50vh
     -
         _id: booking
-    
+        color-scheme: mint-200
     -
         _id: wave-grid
         block-content-html: >-
