Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -504,7 +504,7 @@ blocks:
                     beyond.
                 image: /uploads/stay-longer-and-save.jpg
                 button:
-                    url: '#'
+                    url: mailto:reservations.regentbali@ihg.com
                     text: reserve
             -
                 heading: Serene Lagoon Upgrade
@@ -516,7 +516,7 @@ blocks:
                     assortment of delights and fine selection of teas.
                 image: /uploads/serene-lagoon-upgrade.jpg
                 button:
-                    url: '#'
+                    url: mailto:reservations.regentbali@ihg.com
                     text: reserve
             -
                 heading: Elegance at Year’s End
@@ -525,7 +525,7 @@ blocks:
                     moments, embracing the art of graceful celebration.
                 image: /uploads/elegance-at-year-s-end.jpg
                 button:
-                    url: '#'
+                    url: mailto:reservations.regentbali@ihg.com
                     text: reserve
         content-max-width: 700px
         text-alignment: center
