Updated 2 files via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ blocks:
                     seven restorative treatment rooms, including one indulgent
                     couples suite, sauna, and plunge pool. Anticipated opening
                     October 2025.
-                button-text: LEARN MORE
+                button-text: DISCOVER MORE
                 link: https://jazzy-boombox.cloudvent.net/Wellness.html
             -
                 nav-heading: Family Havens
