Updated 1 file via CloudCannon.

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -416,7 +416,7 @@ blocks:
                         size: 2368
                         size-m: 220
                         bed-size: ''
-                        sleeps: 0
+                        sleeps: 4
                         extra-feature:
                             - ''
                         content: >-
@@ -428,7 +428,7 @@ blocks:
 
 
                             Your terrace leads to a private 20 sqm pool,
-                            offering unhurried moments beneath the island's
+                            offering unhurried moments beneath the island’s
                             golden sun. A dedicated pantry and dining room,
                             perfect for intimate gatherings, make the villa
                             ideal for moments of solace. Villa guests will
