--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -1,5 +1,5 @@
 ---
-heading: "Cookie Policy"
+heading: Cookie Policy
 layout: default
 blocks:
     -
@@ -17,7 +17,57 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-                 "<h2 class='heading-lg'>Cookie Policy</h2><p>Cookie Policy</p>"
+            <h2 class="heading-lg">Cookie Policy</h2><p><strong>Cookie Usage
+            Policy</strong></p><p><strong>What we collect</strong></p><p>We may
+            collect the following information:</p><ol><li><p>name and job
+            title</p></li><li><p>contact information including email
+            address</p></li><li><p>demographic information such as postcode,
+            preferences and interests</p></li><li><p>other information relevant
+            to customer surveys and/or offers</p></li></ol><p><strong>What we do
+            with the information we gather</strong></p><p>We require this
+            information to understand your needs and provide you with a better
+            service, and in particular for the following
+            reasons:</p><ol><li><p>Internal record keeping</p></li><li><p>We may
+            use the information to improve our products and
+            services.</p></li><li><p>We may periodically send promotional emails
+            about new products, special offers or other information which we
+            think you may find interesting using the email address which you
+            have provided.</p></li><li><p>From time to time, we may also use
+            your information to contact you for market research purposes. We may
+            contact you by email, phone, fax or mail.</p></li><li><p>We may use
+            the information to customise the website according to your
+            interests.</p></li></ol><p><strong>Security</strong></p><p>We are
+            committed to ensuring that your information is secure. In order to
+            prevent unauthorised access or disclosure, we have put in place
+            suitable physical, electronic and managerial procedures to safeguard
+            and secure the information we collect online.</p><p><strong>Links to
+            other websites</strong></p><p>Our website may contain links to other
+            websites of interest. However, once you have used these links to
+            leave our site, you should note that we do not have any control over
+            that other website. Therefore, we cannot be responsible for the
+            protection and privacy of any information which you provide whilst
+            visiting such sites and such sites are not governed by this privacy
+            statement. You should exercise caution and look at the privacy
+            statement applicable to the website in
+            question.</p><p><strong>Controlling your personal
+            information</strong></p><p>You may choose to restrict the collection
+            or use of your personal information in the following
+            ways:</p><p>Whenever you are asked to fill in a form on the website,
+            look for the box that you can click to indicate that you do not want
+            the information to be used by anybody for direct marketing
+            purposes</p><p>If you have previously agreed to us using your
+            personal information for direct marketing purposes, you may change
+            your mind at any time by writing to us from contat email
+            here.</p><p>We will not sell, distribute or lease your personal
+            information to third parties unless we have your permission or are
+            required by law to do so.</p><p>We may use your personal information
+            to send you promotional information about third parties which we
+            think you may find interesting if you tell us that you wish this to
+            happen.</p><p>You may request details of personal information which
+            we hold about you under the Data Protection Act 1998. A small fee
+            will be payable. If you would like a copy of the information held on
+            you please write to Hotel Indigo Bali Seminyak Beach JI.Camplung
+            Tanduk No. 10 Seminyak, Bali Indonesia.</p><p></p>
         overlay-color-scheme: mint-400
         content-max-width: 43rem
         text-alignment: center
