--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -17,25 +17,25 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h2 class="heading-lg">Cookie Policy</h2><p><strong>Cookie Usage
-            Policy</strong></p><p><strong>What we collect</strong></p><p>We may
-            collect the following information:</p><ol><li><p>name and job
-            title</p></li><li><p>contact information including email
-            address</p></li><li><p>demographic information such as postcode,
-            preferences and interests</p></li><li><p>other information relevant
-            to customer surveys and/or offers</p></li></ol><p><strong>What we do
-            with the information we gather</strong></p><p>We require this
-            information to understand your needs and provide you with a better
-            service, and in particular for the following
-            reasons:</p><ol><li><p>Internal record keeping</p></li><li><p>We may
-            use the information to improve our products and
-            services.</p></li><li><p>We may periodically send promotional emails
-            about new products, special offers or other information which we
-            think you may find interesting using the email address which you
-            have provided.</p></li><li><p>From time to time, we may also use
-            your information to contact you for market research purposes. We may
-            contact you by email, phone, fax or mail.</p></li><li><p>We may use
-            the information to customise the website according to your
+            <h2 class="heading-lg">Cookie Usage Policy</h2><p><strong>What we
+            collect</strong></p><p>We may collect the following
+            information:</p><ol><li><p>name and job title</p></li><li><p>contact
+            information including email address</p></li><li><p>demographic
+            information such as postcode, preferences and
+            interests</p></li><li><p>other information relevant to customer
+            surveys and/or offers</p></li></ol><p><strong>What we do with the
+            information we gather</strong></p><p>We require this information to
+            understand your needs and provide you with a better service, and in
+            particular for the following reasons:</p><ol><li><p>Internal record
+            keeping</p></li><li><p>We may use the information to improve our
+            products and services.</p></li><li><p>We may periodically send
+            promotional emails about new products, special offers or other
+            information which we think you may find interesting using the email
+            address which you have provided.</p></li><li><p>From time to time,
+            we may also use your information to contact you for market research
+            purposes. We may contact you by email, phone, fax or
+            mail.</p></li><li><p>We may use the information to customise the
+            website according to your
             interests.</p></li></ol><p><strong>Security</strong></p><p>We are
             committed to ensuring that your information is secure. In order to
             prevent unauthorised access or disclosure, we have put in place
