Updated 2 files via CloudCannon.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -341,16 +341,19 @@ blocks:
             Customer AdTrack Audience Management System - Mobile
             Website.App</p></li></ol><p>Further information on the general use
             and function of the third party cookies listed above can be found at
-            <a
-            href="http://optout.aboutads.info/#/">http://optout.aboutads.info/#/</a>.</p><p>How
+            <a href="http://optout.aboutads.info/#/" target="_blank"
+            rel="noopener"><u>http://optout.aboutads.info/#/</u></a>.</p><p>How
             do I turn cookies off?</p><p>If you do not wish us to install
             cookies or you don’t agree with how we use these cookies, you can
             change the settings on your internet browser to reject them. For
             more information please consult the “Help” section of your browser
-            or visit</p><ol><li><p><a
-            href="http://www.aboutcookies.org/">www.aboutcookies.org</a></p></li><li><p><a
-            href="http://www.allaboutcookies.org/">www.allaboutcookies.org</a></p></li><li><p><a
-            href="http://optout.aboutads.info/#/">http://optout.aboutads.info/#/</a></p></li></ol><p>Please
+            or visit</p><ol><li><p><a href="http://www.aboutcookies.org/"
+            target="_blank"
+            rel="noopener"><u>www.aboutcookies.org</u></a></p></li><li><p><a
+            href="http://www.allaboutcookies.org/" target="_blank"
+            rel="noopener"><u>www.allaboutcookies.org</u></a></p></li><li><p><a
+            href="http://optout.aboutads.info/#/" target="_blank"
+            rel="noopener"><u>http://optout.aboutads.info/#/</u></a></p></li></ol><p>Please
             note that if you do set your browser to reject cookies, you may not
             be able to use all of the features on our websites.</p><p>Thank you
             for your acceptance of the information provided above.</p>
