fixed preivacy and cookie headers

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -1,6 +1,9 @@
 ---
 heading: Cookie Policy
 layout: default
+header:
+    text-color: '#ffffff'
+    background-color-mobile: '#003B49'
 blocks:
     -
         _id: banner-video
