--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,9 @@
 ---
 heading: Privacy Policy
 layout: default
+header:
+    text-color: '#fff'
+    background-color-mobile: '#003B49'
 blocks:
     -
         _id: banner-video
