Updated 1 file via CloudCannon.

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -49,7 +49,7 @@ blocks:
             visiting such sites and such sites are not governed by this privacy
             statement. You should exercise caution and look at the privacy
             statement applicable to the website in
-            question.</p><p><strong>Controlling your personal
+            question.</p><p></p><p></p><p><strong>Controlling your personal
             information</strong></p><p>You may choose to restrict the collection
             or use of your personal information in the following
             ways:</p><p>Whenever you are asked to fill in a form on the website,
@@ -66,10 +66,10 @@ blocks:
             happen.</p><p>You may request details of personal information which
             we hold about you under the Data Protection Act 1998. A small fee
             will be payable. If you would like a copy of the information held on
-            you please write to Hotel Indigo Bali Seminyak Beach JI.Camplung
-            Tanduk No. 10 Seminyak, Bali Indonesia.</p><p></p>
+            you please write to <strong>Regent Bali Canggu Jl. Pantai Batu
+            Bolong No.93xx, Canggu, Bali Indonesia.</strong></p>
         overlay-color-scheme: mint-400
-        content-max-width: 43rem
+        content-max-width: 1024px
         text-alignment: center
         color-scheme: dark
         min-height: 50vh
