Updated 4 files via CloudCannon.

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -73,7 +73,7 @@ blocks:
             Bolong No.93xx, Canggu, Bali Indonesia.</strong></p>
         overlay-color-scheme: mint-400
         content-max-width: 1024px
-        text-alignment: center
+        text-alignment: left
         color-scheme: dark
         min-height: 50vh
 ---
