--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -354,7 +354,7 @@ blocks:
             for your acceptance of the information provided above.</p><p></p>
         overlay-color-scheme: mint-400
         content-max-width: 43rem
-        text-alignment: center
+        text-alignment: left
         color-scheme: dark
         min-height: 50vh
 ---
