--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -63,7 +63,7 @@ blocks:
             />© Copyright 2026 <strong>Regent Bali Canggu</strong></p><p></p>
         overlay-color-scheme: mint-400
         content-max-width: 43rem
-        text-alignment: center
+        text-alignment: left
         color-scheme: dark
         min-height: 50vh
 ---
