Updated 1 file via CloudCannon.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -20,7 +20,8 @@ blocks:
     -
         _id: text-block-top-overlap
         block-content-html: >-
-            <h2 class="heading-lg"><strong>Privacy Policy</strong></h2><p>This
+            <h2 class="heading-lg"><strong>Privacy
+            Policy</strong></h2><p><strong>Privacy Policy</strong></p><p>This
             Privacy &amp; Cookie Policy explains our personal data practices and
             the choices you can make about the way your personal data is
             used.</p><p><strong>Regent Bali Canggu</strong> (“<strong>Regent
@@ -291,46 +292,46 @@ blocks:
             visited and the links you have followed to other websites. We will
             use this information to try and make our websites and other sites
             that you visit more relevant to your interests. We may also share
-            this information with others, such as Hotel Indigo Bali Seminyak
-            Beach companies and carefully selected third parties, for this
-            purpose. We work with technology partners to support our websites
-            and to provide you with relevant information about the products and
-            services of websites and on affiliated sites or sites within the
-            advertising networks we work with. We may use cookies on our
-            websites to help us to place relevant advertising on third party
-            websites when you visit those sites. If you are not happy for us to
-            do this, please see the section of this policy titled “How do I turn
-            cookies off?” below.</p><p>Functionality Cookies</p><p>We may use
-            functional cookies that allow us to remember choices you have made
-            on the websites so as to provide you with a more enhanced user
-            experience by delivering content specific to your
-            interests.</p><p>Strictly Necessary Cookies</p><p>These are cookies
-            that are required for the administration and operation of our
-            websites. Some cookies that we use are necessary for our websites to
-            function properly and to enable you to move around the websites and
-            use its features.</p><p>Third Party Cookies because Hotel Indigo
-            Bali Seminyak Beach has a strong presence on various social
-            networks, we try and make it as easy as possible to share content
-            and to see what content is popular on those networks. We add buttons
-            to allow people to easily share to those networks. We also use
-            Facebook to power some of the chat functionality on the websites.
-            When we include these social ‘plugins’, it gives those sites the
-            flexibility to use their own cookies. They can’t read any cookies we
-            set from our websites, and we can’t read any cookies they set, but
-            it lets them do the same kind of traffic measuring that we do on the
-            rest of the websites, and it also lets them know whether you’re
-            logged into their site. For example, if you’re logged in to
-            Facebook, and want to converse via the chat widget, you can do that
-            straight away without having to log in again – we never know whether
-            you’re logged in or not, as you communicate directly with Facebook,
-            through their plugins on our websites. Other sites and services
-            (including, for example, advertising networks, providers of external
-            services like web traffic analysis services and content
-            recommendation engines) may also use cookies, over which we have no
-            control. These cookies are likely to be analytical/performance
-            cookies or targeting cookies.</p><p>As at 2019, these are some of
-            the tracking technologies and cookies we may use on the websites
-            where this policy appears to improve our websites and the
+            this information with others, such as Regent Bali Canggu companies
+            and carefully selected third parties, for this purpose. We work with
+            technology partners to support our websites and to provide you with
+            relevant information about the products and services of websites and
+            on affiliated sites or sites within the advertising networks we work
+            with. We may use cookies on our websites to help us to place
+            relevant advertising on third party websites when you visit those
+            sites. If you are not happy for us to do this, please see the
+            section of this policy titled “How do I turn cookies off?”
+            below.</p><p>Functionality Cookies</p><p>We may use functional
+            cookies that allow us to remember choices you have made on the
+            websites so as to provide you with a more enhanced user experience
+            by delivering content specific to your interests.</p><p>Strictly
+            Necessary Cookies</p><p>These are cookies that are required for the
+            administration and operation of our websites. Some cookies that we
+            use are necessary for our websites to function properly and to
+            enable you to move around the websites and use its
+            features.</p><p>Third Party Cookies because Regent Bali Canggu has a
+            strong presence on various social networks, we try and make it as
+            easy as possible to share content and to see what content is popular
+            on those networks. We add buttons to allow people to easily share to
+            those networks. We also use Facebook to power some of the chat
+            functionality on the websites. When we include these social
+            ‘plugins’, it gives those sites the flexibility to use their own
+            cookies. They can’t read any cookies we set from our websites, and
+            we can’t read any cookies they set, but it lets them do the same
+            kind of traffic measuring that we do on the rest of the websites,
+            and it also lets them know whether you’re logged into their site.
+            For example, if you’re logged in to Facebook, and want to converse
+            via the chat widget, you can do that straight away without having to
+            log in again – we never know whether you’re logged in or not, as you
+            communicate directly with Facebook, through their plugins on our
+            websites. Other sites and services (including, for example,
+            advertising networks, providers of external services like web
+            traffic analysis services and content recommendation engines) may
+            also use cookies, over which we have no control. These cookies are
+            likely to be analytical/performance cookies or targeting
+            cookies.</p><p>As at 2019, these are some of the tracking
+            technologies and cookies we may use on the websites where this
+            policy appears to improve our websites and the
             experience:</p><ol><li><p>Revinate - Email marketing
             provider</p></li><li><p>Facebook Connect – Facebook login
             connector</p></li><li><p>Facebook Custom Audience – Advertiser
@@ -339,16 +340,19 @@ blocks:
             Targeting</p></li><li><p>Google Tag Manager – Technology
             deployment</p></li></ol><p>Further information on the general use
             and function of the third party cookies listed above can be found at
-            <a
-            href="http://optout.aboutads.info/#/">http://optout.aboutads.info/#/</a>.</p><p>How
+            <a href="http://optout.aboutads.info/#/" target="_blank"
+            rel="noopener"><u>http://optout.aboutads.info/#/</u></a>.</p><p>How
             do I turn cookies off?</p><p>If you do not wish us to install
             cookies or you don’t agree with how we use these cookies, you can
             change the settings on your internet browser to reject them. For
             more information please consult the “Help” section of your browser
-            or visit</p><ol><li><p><a
-            href="http://www.aboutcookies.org/">www.aboutcookies.org</a></p></li><li><p><a
-            href="http://www.allaboutcookies.org/">www.allaboutcookies.org</a></p></li><li><p><a
-            href="http://optout.aboutads.info/#/">http://optout.aboutads.info/#/</a></p></li></ol><p>Please
+            or visit</p><ol><li><p><a href="http://www.aboutcookies.org/"
+            target="_blank"
+            rel="noopener"><u>www.aboutcookies.org</u></a></p></li><li><p><a
+            href="http://www.allaboutcookies.org/" target="_blank"
+            rel="noopener"><u>www.allaboutcookies.org</u></a></p></li><li><p><a
+            href="http://optout.aboutads.info/#/" target="_blank"
+            rel="noopener"><u>http://optout.aboutads.info/#/</u></a></p></li></ol><p>Please
             note that if you do set your browser to reject cookies, you may not
             be able to use all of the features on our websites.</p><p>Thank you
             for your acceptance of the information provided above.</p><p></p>
